# docs/api/swagger.yaml
@@ -114,6 +114,35 @@ components:
         totalDurationMs:
           type: integer
       type: object
+    AuthLoginRequest:
+      properties:
+        password:
+          minLength: 6
+          type: string
+        username:
+          maxLength: 50
+          minLength: 3
+          type: string
+      required:
+      - password
+      - username
+      type: object
+    AuthLoginResponse:
+      properties:
+        user:
+          $ref: '#/components/schemas/AuthUserResponse'
+      type: object
+    AuthUserResponse:
+      properties:
+        createdAt:
+          type: string
+        id:
+          type: string
+        role:
+          type: string
+        username:
+          type: string
+      type: object
     AutoDetectionConfig:
       properties:
         detectedProject:
@@ -873,6 +902,63 @@ components:
         config:
           $ref: '#/components/schemas/ValidationConfig'
       type: object
+    UserCreateRequest:
+      properties:
+        password:
+          minLength: 6
+          type: string
+        role:
+          enum:
+          - admin
+          - viewer
+          type: string
+        username:
+          maxLength: 50
+          minLength: 3
+          type: string
+      required:
+      - password
+      - role
+      - username
+      type: object
+    UserListResponse:
+      properties:
+        data:
+          items:
+            $ref: '#/components/schemas/UserResponse'
+          type: array
+          uniqueItems: false
+        pagination:
+          $ref: '#/components/schemas/Pagination'
+      type: object
+    UserResponse:
+      properties:
+        createdAt:
+          type: string
+        id:
+          type: string
+        role:
+          type: string
+        updatedAt:
+          type: string
+        username:
+          type: string
+      type: object
+    UserUpdateRequest:
+      properties:
+        password:
+          minLength: 6
+          type: string
+        role:
+          enum:
+          - admin
+          - viewer
+          type: string
+        username:
+          maxLength: 50
+          minLength: 3
+          type: string
+      type: object
     ValidationConfig:
       properties:
         autoDetection:
@@ -929,178 +1015,6 @@ components:
           type: boolean
         status:
           example: processed
-          type: string
-      type: object
-    github_com_ryuyb_litchi_internal_application_server_handler_auth.LoginRequest:
-      properties:
-        password:
-          minLength: 6
-          type: string
-        username:
-          maxLength: 50
-          minLength: 3
-          type: string
-      required:
-      - password
-      - username
-      type: object
-    github_com_ryuyb_litchi_internal_application_server_handler_auth.LoginResponse:
-      properties:
-        user:
-          $ref: '#/components/schemas/github_com_ryuyb_litchi_internal_application_server_handler_auth.UserResponse'
-      type: object
-    github_com_ryuyb_litchi_internal_application_server_handler_auth.UserResponse:
-      properties:
-        createdAt:
-          type: string
-        id:
-          type: string
-        role:
-          type: string
-        username:
-          type: string
-      type: object
-    github_com_ryuyb_litchi_internal_application_server_handler_user.CreateUserRequest:
-      properties:
-        password:
-          minLength: 6
-          type: string
-        role:
-          enum:
-          - admin
-          - viewer
-          type: string
-        username:
-          maxLength: 50
-          minLength: 3
-          type: string
-      required:
-      - password
-      - role
-      - username
-      type: object
-    github_com_ryuyb_litchi_internal_application_server_handler_user.UpdateUserRequest:
-      properties:
-        password:
-          minLength: 6
-          type: string
-        role:
-          enum:
-          - admin
-          - viewer
-          type: string
-        username:
-          maxLength: 50
-          minLength: 3
-          type: string
-      type: object
-    github_com_ryuyb_litchi_internal_application_server_handler_user.UserListResponse:
-      properties:
-        data:
-          items:
-            $ref: '#/components/schemas/github_com_ryuyb_litchi_internal_application_server_handler_user.UserResponse'
-          type: array
-          uniqueItems: false
-        pagination:
-          $ref: '#/components/schemas/Pagination'
-      type: object
-    github_com_ryuyb_litchi_internal_application_server_handler_user.UserResponse:
-      properties:
-        createdAt:
-          type: string
-        id:
-          type: string
-        role:
-          type: string
-        updatedAt:
-          type: string
-        username:
-          type: string
-      type: object
-    internal_application_server_handler_auth.LoginRequest:
-      properties:
-        password:
-          minLength: 6
-          type: string
-        username:
-          maxLength: 50
-          minLength: 3
-          type: string
-      required:
-      - password
-      - username
-      type: object
-    internal_application_server_handler_auth.LoginResponse:
-      properties:
-        user:
-          $ref: '#/components/schemas/internal_application_server_handler_auth.UserResponse'
-      type: object
-    internal_application_server_handler_auth.UserResponse:
-      properties:
-        createdAt:
-          type: string
-        id:
-          type: string
-        role:
-          type: string
-        username:
-          type: string
-      type: object
-    internal_application_server_handler_user.CreateUserRequest:
-      properties:
-        password:
-          minLength: 6
-          type: string
-        role:
-          enum:
-          - admin
-          - viewer
-          type: string
-        username:
-          maxLength: 50
-          minLength: 3
-          type: string
-      required:
-      - password
-      - role
-      - username
-      type: object
-    internal_application_server_handler_user.UpdateUserRequest:
-      properties:
-        password:
-          minLength: 6
-          type: string
-        role:
-          enum:
-          - admin
-          - viewer
-          type: string
-        username:
-          maxLength: 50
-          minLength: 3
-          type: string
-      type: object
-    internal_application_server_handler_user.UserListResponse:
-      properties:
-        data:
-          items:
-            $ref: '#/components/schemas/internal_application_server_handler_user.UserResponse'
-          type: array
-          uniqueItems: false
-        pagination:
-          $ref: '#/components/schemas/Pagination'
-      type: object
-    internal_application_server_handler_user.UserResponse:
-      properties:
-        createdAt:
-          type: string
-        id:
-          type: string
-        role:
-          type: string
-        updatedAt:
-          type: string
-        username:
           type: string
       type: object
 externalDocs:
@@ -1373,7 +1287,7 @@ paths:
             schema:
               oneOf:
               - type: object
-              - $ref: '#/components/schemas/github_com_ryuyb_litchi_internal_application_server_handler_auth.LoginRequest'
+              - $ref: '#/components/schemas/AuthLoginRequest'
                 description: Login credentials
                 summary: body
         description: Login credentials
@@ -1383,7 +1297,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/github_com_ryuyb_litchi_internal_application_server_handler_auth.LoginResponse'
+                $ref: '#/components/schemas/AuthLoginResponse'
           description: Login successful
         "400":
           content:
@@ -1435,7 +1349,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/github_com_ryuyb_litchi_internal_application_server_handler_auth.UserResponse'
+                $ref: '#/components/schemas/AuthUserResponse'
           description: Current user info
         "401":
           content:
@@ -2635,7 +2549,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/github_com_ryuyb_litchi_internal_application_server_handler_user.UserListResponse'
+                $ref: '#/components/schemas/UserListResponse'
           description: Users retrieved successfully
         "401":
           content:
@@ -2666,7 +2580,7 @@ paths:
             schema:
               oneOf:
               - type: object
-              - $ref: '#/components/schemas/github_com_ryuyb_litchi_internal_application_server_handler_user.CreateUserRequest'
+              - $ref: '#/components/schemas/UserCreateRequest'
                 description: User creation request
                 summary: body
         description: User creation request
@@ -2676,7 +2590,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/github_com_ryuyb_litchi_internal_application_server_handler_user.UserResponse'
+                $ref: '#/components/schemas/UserResponse'
           description: User created successfully
         "400":
           content:
@@ -2772,7 +2686,7 @@ paths:
             schema:
               oneOf:
               - type: object
-              - $ref: '#/components/schemas/github_com_ryuyb_litchi_internal_application_server_handler_user.UpdateUserRequest'
+              - $ref: '#/components/schemas/UserUpdateRequest'
                 description: User update request
                 summary: body
         description: User update request
@@ -2782,7 +2696,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/github_com_ryuyb_litchi_internal_application_server_handler_user.UserResponse'
+                $ref: '#/components/schemas/UserResponse'
           description: User updated successfully
         "400":
           content:
